--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
+certifi==2018.4.16
+chardet==3.0.4
 Django==2.0.7
+django-uuidfield==0.5.0
+djangorestframework==3.8.2
+fcm-django==0.2.19
+idna==2.7
 psycopg2==2.7.5
+pyfcm==1.4.5
 python-dotenv==0.8.2
 pytz==2018.5
+requests==2.19.1
+requests-toolbelt==0.8.0
+urllib3==1.23
 whitenoise==3.3.1
