--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,37 @@
+amqp==2.3.2
+backcall==0.1.0
+billiard==3.5.0.4
+celery==4.2.1
 certifi==2018.4.16
 chardet==3.0.4
+decorator==4.3.0
 Django==2.0.7
+django-celery-beat==1.1.1
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
 fcm-django==0.2.19
 idna==2.7
+ipython==6.5.0
+ipython-genutils==0.2.0
+jedi==0.12.1
+kombu==4.2.1
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
 psycopg2==2.7.5
+ptyprocess==0.6.0
 pyfcm==1.4.5
+Pygments==2.2.0
 python-dotenv==0.8.2
 pytz==2018.5
+redis==2.10.6
 requests==2.19.1
 requests-toolbelt==0.8.0
+simplegeneric==0.8.1
+six==1.11.0
+traitlets==4.3.2
 urllib3==1.23
+vine==1.1.4
+wcwidth==0.1.7
 whitenoise==3.3.1
