--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-celery-beat==1.1.1
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
 fcm-django==0.2.19
+gunicorn==19.9.0
 idna==2.7
 ipython==6.5.0
 ipython-genutils==0.2.0
@@ -18,6 +19,7 @@ kombu==4.2.1
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
+pipenv==2018.7.1
 prompt-toolkit==1.0.15
 psycopg2==2.7.5
 ptyprocess==0.6.0
@@ -33,5 +35,7 @@ six==1.11.0
 traitlets==4.3.2
 urllib3==1.23
 vine==1.1.4
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
 wcwidth==0.1.7
 whitenoise==3.3.1
